[gd_scene load_steps=5 format=2]

[ext_resource path="res://Szenen/GUI/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Szenen/GUI/Game.gd" type="Script" id=3]
[ext_resource path="res://Szenen/GUI/EscMenu.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fadeInScene"
tracks/0/type = "value"
tracks/0/path = NodePath("currentGameScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.554785, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="gg" type="Node2D" parent="."]

[node name="currentGameScreen" type="Node2D" parent="gg"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )

[node name="MainMenu" parent="gg/currentGameScreen" instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="gg"]
anims/fadeInScene = SubResource( 1 )

[node name="EscMenu" parent="gg" instance=ExtResource( 6 )]
visible = false
z_index = 9
